# linux4coder-examples

./: .gitignore  README.md
ex_0/: CMakeLists.txt  Makefile  README.md  build.sh
ex_0/src/: main.c
ex_1/: CMakeLists.txt  Makefile  README.md  clean.sh
ex_1/src/real_num/: main.c
ex_1/src/types/: main.c
ex_2/: CMakeLists.txt  Makefile  README.md
ex_2/src/errors/: main.c
ex_2/src/printf_scanf/: main.c
ex_3/: CMakeLists.txt  README.md
ex_3/src/if_else/: main.c
ex_3/src/if_example/: main.c
ex_3/src/switch/: main.c
ex_4/: CMakeLists.txt  README.md
ex_4/src/break/: main.c
ex_4/src/continue/: main.c
ex_4/src/do_while/: main.c
ex_4/src/for/: main.c
ex_4/src/goto/: main.c
ex_4/src/while/: main.c
ex_5/: CMakeLists.txt  Makefile  README.md
ex_5/src/: main.c
ex_7/: CMakeLists.txt  Makefile  README.md
ex_7/src/struct/: main.c
ex_7/src/typedef/: main.c
ex_7/src/union_enum/: main.c
