cmake_minimum_required(VERSION 3.9)
project(ex_1)
set(CMAKE_C_STANDARD 11)
set(SRC_DIR src)
set(BUILD_DIR build)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O0 -g")
set(TYPES_SOURCE_FILES ${SRC_DIR}/types/main.c)
set(REAL_NUM_SOURCE_FILES ${SRC_DIR}/real_num/main.c)
add_executable(real_num ${REAL_NUM_SOURCE_FILES})
add_executable(types ${TYPES_SOURCE_FILES})
