cmake_minimum_required(VERSION 3.9)
project(ex_2)
set(CMAKE_C_STANDARD 11)
set(SRC_DIR src)
set(BUILD_DIR build)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O0 -g")
set(ERRORS_SOURCE_FILES ${SRC_DIR}/errors/main.c)
set(PRINTF_SCANF_SOURCE_FILES ${SRC_DIR}/printf_scanf/main.c)
add_executable(errors ${ERRORS_SOURCE_FILES})
add_executable(printf_scanf ${PRINTF_SCANF_SOURCE_FILES})
