cmake_minimum_required(VERSION 3.9)
project(ex_3)
set(CMAKE_C_STANDARD 11)
set(SRC_DIR src)
set(BUILD_DIR build)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O0 -g")
set(SWITCH_SOURCE_FILES ${SRC_DIR}/switch/main.c)
set(IF_ELSE_SOURCE_FILES ${SRC_DIR}/if_else/main.c)
set(IF_EXAMPLE_SOURCE_FILES ${SRC_DIR}/if_example/main.c)
add_executable(switch ${SWITCH_SOURCE_FILES})
add_executable(if_else ${IF_ELSE_SOURCE_FILES})
add_executable(if_example ${IF_EXAMPLE_SOURCE_FILES})
target_link_libraries(if_example m)

