cmake_minimum_required(VERSION 3.9)
project(ex_4)
set(CMAKE_C_STANDARD 11)
set(SRC_DIR src)
set(BUILD_DIR build)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O0 -g")
set(BREAK_SRCS ${SRC_DIR}/break/main.c)
set(CONTINUE_SRCS ${SRC_DIR}/continue/main.c)
set(GOTO_SRCS ${SRC_DIR}/goto/main.c)
set(FOR_SRCS ${SRC_DIR}/for/main.c)
set(WHILE_SRCS ${SRC_DIR}/while/main.c)
set(DO_WHILE_SRCS ${SRC_DIR}/do_while/main.c)
add_executable(break ${BREAK_SRCS})
add_executable(continue ${CONTINUE_SRCS})
add_executable(goto ${GOTO_SRCS})
add_executable(for ${FOR_SRCS})
add_executable(while ${WHILE_SRCS})
add_executable(do_while ${DO_WHILE_SRCS})
target_link_libraries(while m)
target_link_libraries(do_while m)
target_link_libraries(for m)
